@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 12-09-2006 fixed: make sure there is no raw font's available to mplayer to load into memory when using ttf fonts for subs
  - 12-09-2006 changed: switch to standard memcpy/set since fast_memcpy/set is generally alot slower than standard xdk versions.
  - 12-09-2006 fixed: cancelation of big files didn't work for rars.
  - 12-09-2006 changed: make xbmc log when a delete or rename fails
